# OMNYIE-fi

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  New Text Document.txt  README.md  package-lock.json  skills-lock.json
app/: package-lock.json  package.json
app/src/app/: client-providers.tsx  globals.css  layout.tsx  page.tsx
app/src/app/api/burn-tranche/: route.ts
app/src/app/api/mint-tranche/: route.ts
app/src/app/deposit/: page.tsx
app/src/app/epochs/: page.tsx
app/src/app/pools/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: AddTokenBanner.tsx  ConnectWalletPrompt.tsx  NetworkGuard.tsx  ParticleBackground.tsx
app/src/components/layout/: Navbar.tsx
app/src/components/ui/: AnimatedCounter.tsx  Badge.tsx  Button.tsx  Card.tsx
app/src/hooks/: useMockData.ts  useProtocol.ts
app/src/lib/: constants.ts  encrypt.ts  utils.ts
app/src/lib/idl/: strata_core.json  strata_token.json
app/src/providers/: WalletProvider.tsx
programs/strata-core/: Cargo.toml
programs/strata-core/src/: errors.rs  lib.rs
programs/strata-core/src/adapters/: mock_kamino.rs  mod.rs
programs/strata-core/src/compute/: claimable_math.rs  mod.rs
programs/strata-core/src/instructions/: create_epoch.rs  deposit.rs  distribute_yield.rs  finalize_withdraw_decryption.rs  force_mature_epoch.rs  harvest_yield.rs  initialize.rs  mod.rs  request_withdraw_decryption.rs  start_epoch.rs  withdraw.rs
programs/strata-core/src/state/: epoch.rs  mod.rs  position.rs  private_math.rs  protocol.rs
programs/strata-token/: Cargo.toml
programs/strata-token/src/: errors.rs  lib.rs  state.rs
programs/strata-token/src/instructions/: burn_tranche.rs  initialize_mints.rs  mint_tranche.rs  mod.rs
scripts/: create-epoch.ts  force-mature-epoch.ts  initialize-protocol.ts  mint-existing.ts  quick-fresh-epoch.ts  withdraw.ts
tests/: strata-core.ts
