[package]
name = "strata-core"
version = "0.1.0"
description = "Strata Finance - Yield Tranching Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "strata_core"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]

# Silence noisy cfg warnings from Anchor
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
mock-yield = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
encrypt-types = { path = "../../vendor/encrypt-pre-alpha/crates/encrypt-types" }
encrypt-dsl = { package = "encrypt-solana-dsl", path = "../../vendor/encrypt-pre-alpha/chains/solana/program-sdk/dsl" }
encrypt-anchor = { path = "../../vendor/encrypt-pre-alpha/chains/solana/program-sdk/anchor" }

# Optional pins to avoid edition2024 issues (you already had these)
blake3 = ">=1.5, <1.8"
digest = ">=0.10, <0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
