[package]
name = "strata-token"
version = "0.1.0"
description = "Strata Finance - Tranche Token Manager (Token-2022)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "strata_token"

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]

# Silence the cfg warnings
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
blake3 = ">=1.5, <1.8"
digest = ">=0.10, <0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
